@@ -1,4 +1,5 @@
 0.07
+ - Update Module::Install to 1.14 version.
 
 0.06 2014-10-24T02:02:01+02:00
  - Add tests.
